# trajectories

./: .gitignore  Makefile  README.md  _CoqProject  coq-mathcomp-trajectories.opam  meta.yml  trajectories.opam
.github/workflows/: docker-action.yml
documents/: FHG_paper.tex  FHG_slides.tex  Makefile  collision.ps  collision2.ps
documents/final_FHG/: FHG_paper.bib  Makefile  bezier_example3.ps  broken_safe_path.ps  cells_spiral2.ps  empty_spiral.ps  repair.ps  safe_straight_path.ps  small_bline.ps  small_curve.ps  smooth_connect.ps  smooth_spiral_bare.ps  sorting_input.ps  spiral_bline.ps
documents/vertical-cells/: .gitignore  Makefile  cells_spiral3.ps  empty_spiral.ps  main.bib  main.tex  partial_spiral.ps  partial_spiral2.ps  slides_itp25.tex  waveline.ml
theories/: bern.v  casteljau.v  cells.v  cells_alg.v  conv.v  convex.v  door_crossing.v  encompass.v  events.v  first_degenerate_position.v  general_position.v  generic_trajectories.v  hulls.v  initial_cell.v  intersection.v  math_comp_complements.v  no_crossing.v  opening_cells.v  points_and_edges.v  preliminaries.v  preliminaries_hull.v  safe_cells.v  second_degenerate_position.v  shortest_path.v  shortest_path_proofs.v  simple_step.v  smooth_trajectories.v  step_correct.v
theories/ssr_descartes/: bern.v  casteljau.v  civt.v
www/: Makefile.coq.local  grid.html  grid.js  jSmoothTrajectories.ml
