opam-version: "2.0"
version: "dev"

license: "CECILL-C"

synopsis: "Trajectories"
description: """
TODO"""

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" { (= "8.20") }
  "coq-mathcomp-ssreflect" { (= "2.3.0") }
  "coq-mathcomp-fingroup" { (= "2.3.0") }
  "coq-mathcomp-algebra" { (= "2.3.0") }
  "coq-mathcomp-solvable" { (= "2.3.0")}
  "coq-mathcomp-field" { (= "2.3.0")}
  "coq-mathcomp-real-closed" { (= "2.0.0")}
  "coq-mathcomp-algebra-tactics" { (= "1.2.0")}
]

tags: [
  "category:Mathematics/Real Calculus and Topology"
  "keyword:trajectories"
]

