opam-version: "2.0"
version: "dev"

license: "CECILL-C"
maintainer: "anonymous"
authors: "anonymous"
homepage: "no homepage"
bug-reports: "anonymous"

synopsis: "Trajectories"
description: """
TODO"""

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" { (>= "8.20.0" & < "8.21~") }
  "coq-mathcomp-ssreflect" { (= "2.3.0") }
  "coq-mathcomp-fingroup" { (= "2.3.0") }
  "coq-mathcomp-algebra" { (= "2.3.0") }
  "coq-mathcomp-solvable" { (= "2.3.0")}
  "coq-mathcomp-field" { (= "2.3.0")}
  "coq-mathcomp-real-closed" { (= "2.0.2")}
  "coq-mathcomp-algebra-tactics" { (= "1.2.4")}
  "js_of_ocaml" { (= "6.0.1")}
  "js_of_ocaml-ppx" { (= "6.0.1")}
]

tags: [
  "category:Mathematics/Real Calculus and Topology"
  "keyword:trajectories"
]

